  * add support for per-root configuration overrides
  * add support for optional email address mangling (issue #290)
  * extensible path-based authorization subsystem (issue #268), supporting:
    - Subversion authz files
    - regexp-based path hiding
    - file glob top-level directory hiding (for compat with 1.0.x)

Version 1.0.4 (released 10-Apr-2007)

  * fix some markup bugs in query views (issue #266)
  * fix loginfo-handler's support for CVS 1.12.9 (issues #151, #257)
  * make viewvc-install able to run from an arbitrary location
  * update viewvc-install's output for readability
  * fix bug writing commits to non-MyISAM databases (issue #262)
  * allow long paths in generated tarballs (issue #12)
  * fix bug interpreting EZT substitute patterns
  * fix broken markup view disablement
  * fix broken directory view link generation in directory log view
  * fix Windows-specific viewvc-install bugs
  * fix broke query result links for Subversion deleted items (issue #296)
  * fix some output XHTML validation buglets
  * fix database query cache staleness problems (issue #180)

Version 1.0.3 (released 13-Oct-2006)

  * fix bug in path shown for Subversion deleted-under-copy items (issue #265)
  * security fix: declare charset for views to avoid IE UTF7 XSS attack

Version 1.0.2 (released 29-Sep-2006)

  * minor documentation fixes
  * fix Subversion annotate functionality on Windows (issue #18)
  * fix annotate assertions on uncanonicalized #include paths (issue #208)
  * make RSS URL method match the method used to generate it (issue #245)
  * fix Subversion annotation to run non-interactively, preventing hangs
  * fix bug in custom syntax highlighter fallback logic
  * fix bug in PHP CGI hack to avoid force-cgi-redirect errors

Version 1.0.1 (released 20-Jul-2006)

  * fix exception on log page when use_pagesize is enabled
  * fix an XHTML validation bug in the footer template (issue #239)
  * fix handling of single-component CVS revision numbers (issue #237)